# project

./: .gitignore  README.md  final_model.pt  game_dataset.py  linear_probes.py  main.py  probe_prediction.py  pyproject.toml  solutions.db  test_game_dataset.py
data/: zero_by_2_1000_4_7_13.csv
models/MLPClassifier/mnk_3_3_3/: 10.pt  12.pt  14.pt  16.pt  18.pt  2.pt  20.pt  22.pt  24.pt  26.pt  28.pt  30.pt  4.pt  6.pt  8.pt
models/MLPClassifier/mnk_3_3_3/10/: checkpoint.pt
models/MLPClassifier/mnk_3_3_3/12/: checkpoint.pt
models/MLPClassifier/mnk_3_3_3/14/: checkpoint.pt
models/MLPClassifier/mnk_3_3_3/16/: checkpoint.pt
models/MLPClassifier/mnk_3_3_3/18/: checkpoint.pt
models/MLPClassifier/mnk_3_3_3/2/: checkpoint.pt
models/MLPClassifier/mnk_3_3_3/20/: checkpoint.pt
models/MLPClassifier/mnk_3_3_3/22/: checkpoint.pt
models/MLPClassifier/mnk_3_3_3/24/: checkpoint.pt
models/MLPClassifier/mnk_3_3_3/26/: checkpoint.pt
models/MLPClassifier/mnk_3_3_3/28/: checkpoint.pt
models/MLPClassifier/mnk_3_3_3/30/: checkpoint.pt
models/MLPClassifier/mnk_3_3_3/4/: checkpoint.pt
models/MLPClassifier/mnk_3_3_3/6/: checkpoint.pt
models/MLPClassifier/mnk_3_3_3/8/: checkpoint.pt
src/cs182_project.egg-info/: PKG-INFO  SOURCES.txt
src/project/: activations.py  cli.py  debug.py  scripts.py  training.py
src/project/data/: sqlite.py  utility.py
src/project/models/: mlp.py  probes.py
src/project/utils/: checkpoints.py  datasets.py  plotting.py  visualization.py
